tests/baselines/reference/parserArrowFunctionExpression9(strict=true).errors.txt
fileJs.js(1,1): error TS2304: Cannot find name 'b'.
fileJs.js(1,6): error TS2304: Cannot find name 'c'.
fileJs.js(1,11): error TS7006: Parameter 'd' implicitly has an 'any' type.
fileJs.js(1,16): error TS2304: Cannot find name 'e'.
fileTs.ts(1,1): error TS2304: Cannot find name 'b'.
fileTs.ts(1,6): error TS2304: Cannot find name 'c'.
fileTs.ts(1,11): error TS7006: Parameter 'd' implicitly has an 'any' type.
fileTs.ts(1,16): error TS2304: Cannot find name 'e'.


==== fileJs.js (4 errors) ====
    b ? (c) : d => e // Legal JS
    ~
!!! error TS2304: Cannot find name 'b'.
         ~
!!! error TS2304: Cannot find name 'c'.
              ~
!!! error TS7006: Parameter 'd' implicitly has an 'any' type.
                   ~
!!! error TS2304: Cannot find name 'e'.
    
==== fileTs.ts (4 errors) ====
    b ? (c) : d => e
    ~
!!! error TS2304: Cannot find name 'b'.
         ~
!!! error TS2304: Cannot find name 'c'.
              ~
!!! error TS7006: Parameter 'd' implicitly has an 'any' type.
                   ~
!!! error TS2304: Cannot find name 'e'.
    